2008-03-10  John W. Eaton  <jwe@octave.org>

	* blas/zdrot.f, odepack/dlsode.f, odepack/ewset.f,
	odepack/intdy.f, fftpack/cffti.f, fftpack/cfftb.f,
	fftpack/cfftf.f:
	Use (*) instead of (1) for assumed-size dimensions.

2008-03-06  Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dqrinc.f: Declare DGEMV external.
	* qrupdate/zqrinc.f: Declare ZGEMV external.
	Fix complex constant args in call to ZGEMV.

2008-03-05  Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dch1dn.f, qrupdate/zch1dn.f: add "quick return" checks.

2008-03-04 Jaroslav Hajek <highegg@gmail.com>

	* qrupdate/dch1dn.f, qrupdate/dch1up.f, 
	qrupdate/zch1dn.f, qrupdate/zch1up.f: New files.
	* qrupdate/Makefile.in (FSRC): Add them to the list.

	* qrupdate/Makefile.in, qrupdate/dqhqr.f, qrupdate/dqr1up.f,
	qrupdate/dqrdec.f, qrupdate/dqrder.f, qrupdate/dqrinc.f,
	qrupdate/dqrinr.f, qrupdate/dqrqhv.f, qrupdate/zqhqr.f,
	qrupdate/zqr1up.f, qrupdate/zqrdec.f, qrupdate/zqrder.f,
	qrupdate/zqrinc.f, qrupdate/zqrinr.f, qrupdate/zqrqhv.f:
	New files.
	* Makefile.in (CRUFT_DIRS): Add qrupdate to the list.

2008-02-14  John W. Eaton  <jwe@octave.org>

	* misc/f77-fcn.h (F77_XFCN): Call octave_rethrow_exception here
	instead of checking octave_allocation_error.
	* misc/quit.cc (octave_execution_exception): New function.
	(octave_rethrow_exception): New function.
	(octave_handle_signal): Call octave_rethrow_exception instead of
	octave_throw_interrupt_exception.
	* misc/quit.h (octave_execution_error): New variable.
	(END_INTERRUPT_WITH_EXCEPTIONS): Catch octave_execution_exception.
	(octave_execution_exception): New class.
	(octave_exception): New enum.
	(octave_exception_state): Rename from octave_allocation_error.
	Change all uses.

2008-02-12  John W. Eaton  <jwe@octave.org>

	* lapack-xtra/xilaenv.f: New wrapper for Fortran function ilaenv.
	* lapack-xtra/Makefile.in (FSRC): Add it to the list.

2008-02-06  John W. Eaton  <jwe@octave.org>

	* Makerules.in (%.def : %.f): Use mv instead of move-if-change.
